--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
-        <!--[if lt IE 7]><html class="no-js ie6" lang="en" dir="ltr" data-date-format="non_us"><![endif]-->
+ 
+  <!--[if lt IE 7]><html class="no-js ie6" lang="en" dir="ltr" data-date-format="non_us"><![endif]-->
         <!--[if IE 7]><html class="no-js ie7" lang="en" dir="ltr" data-date-format="non_us"><![endif]-->
         <!--[if IE 8]><html class="no-js ie8" lang="en" dir="ltr" data-date-format="non_us"><![endif]-->
         <!--[if IE 9]><html class="no-js ie9" lang="en" dir="ltr" data-date-format="non_us"><![endif]-->
@@ -13,32 +14,32 @@
 <title> Support : Quinntessential Systems Inc </title>
 
 <!-- Meta information -->
-<meta charset="utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<meta name="description" content="" />
-<meta name="Shane Quinn" content="" />  <link rel="canonical" href="https://quinntessentialsystemsinc.freshdesk.com/support/solutions" /> 
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="description" content="">
+<meta name="Shane Quinn" content="">  <link rel="canonical" href="https://quinntessentialsystemsinc.freshdesk.com/support/solutions"> 
 
 <!-- Responsive setting -->
-<link rel="apple-touch-icon" href="/assets/touch/touch-icon-iphone.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="/assets/touch/touch-icon-ipad.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="/assets/touch/touch-icon-iphone-retina.png" />
-<link rel="apple-touch-icon" sizes="144x144" href="/assets/touch/touch-icon-ipad-retina.png" />
-<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0" /> 
+<link rel="apple-touch-icon" href="/assets/touch/touch-icon-iphone.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/assets/touch/touch-icon-ipad.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/assets/touch/touch-icon-iphone-retina.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/assets/touch/touch-icon-ipad-retina.png">
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0"> 
 
 <!-- Adding meta tag for CSRF token -->
-<meta content="authenticity_token" name="csrf-param" />
-<meta content="YlzPEhAhcRVn59ZSGBKXd1ZhzchwlLPVMDQKrHFAaNM=" name="csrf-token" />
+<meta content="authenticity_token" name="csrf-param">
+<meta content="YlzPEhAhcRVn59ZSGBKXd1ZhzchwlLPVMDQKrHFAaNM=" name="csrf-token">
 <!-- End meta tag for CSRF token -->
 
 <!-- Fav icon for portal -->
-<link rel='shortcut icon' href='assets/images/qsys-favicon.png' />
+<link rel='shortcut icon' href='assets/images/qsys-favicon.png'>
 
 <!-- Base stylesheet -->
-<link href="https://assets7.freshdesk.com/assets/cdn/portal_utils-96ae1eecb93dd3dc3407fc80d863d166.css" media="screen" rel="stylesheet" type="text/css" />
-<link href="https://assets10.freshdesk.com/assets/cdn/portal_print-262b6789aa974d42a8ce844dfdea193f.css" media="print" rel="stylesheet" type="text/css" />
+<link href="https://assets7.freshdesk.com/assets/cdn/portal_utils-96ae1eecb93dd3dc3407fc80d863d166.css" media="screen" rel="stylesheet" type="text/css">
+<link href="https://assets10.freshdesk.com/assets/cdn/portal_print-262b6789aa974d42a8ce844dfdea193f.css" media="print" rel="stylesheet" type="text/css">
 
 <!-- Theme stylesheet -->
-<link href="/support/theme.css?v=1486603939" media="screen" rel="stylesheet" type="text/css">
+<!--<link href="/support/theme.css?v=1486603939" media="screen" rel="stylesheet" type="text/css">-->
 
 <!-- Google font url if present -->
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css'>
@@ -52,11 +53,8 @@
 <!-- Font-awesome icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
-
-
 <!-- Qsys stylesheet -->
-<link rel="stylesheet" href="assets/styles/styles.css">
+<link rel="stylesheet" href="temp/styles/styles.css">
 
 <!-- Back-up link testing calls
 <link rel="stylesheet" href="assets/styles/modules/_freshdesk-modified.css">
@@ -65,22 +63,21 @@
 
 <!-- build:js assets/scripts/Vendor.js -->
 <script src="assets/scripts/App.js"></script>
+<script src="assets/scripts/modules/Slideshow.js"></script> 
 <!-- endbuild -->
-
-
-
 
 <!-- Access portal settings information via javascript -->
 <script type="text/javascript">   	var portal = {"language":"en","name":"Quinntessential Systems Inc","contact_info":null,"current_page_name":"portal_home","current_tab":"home","preferences":{"bg_color":"#efefef","header_color":"#4C4C4C","help_center_color":"#f9f9f9","footer_color":"#777777","tab_color":"#002B84","tab_hover_color":"#4c4b4b","btn_background":"#ffffff","btn_primary_background":"#6c6a6a","baseFont":"Helvetica Neue","textColor":"#333333","headingsFont":"Open Sans Condensed","headingsColor":"#333333","linkColor":"#049cdb","linkColorHover":"#036690","inputFocusRingColor":"#f4af1a","nonResponsive":"false"},"image_placeholders":{"spacer":"https://assets7.freshdesk.com/assets/misc/spacer.gif","profile_thumb":"https://assets8.freshdesk.com/assets/misc/profile_blank_thumb-4dc7081f5a81594bba9bcee2a081de27.jpg","profile_medium":"https://assets1.freshdesk.com/assets/misc/profile_blank_medium-155f0a3a5ae0e78ee7917f54b9f26e64.jpg"}}; </script> 
+
 <head/>
 
 <body>
     <header class="banner">
 	    <a href= '/support/home' class='portal-logo'>
-		    <img src='assets/images/qsys_logo.png' alt="Logo" onerror="default_image_error(this)" data-type="logo"/>
+		    <img src='assets/images/qsys_sticky_logo.png' alt="Quinntessential Systems Logo">
 		</a> 
 		    <nav class="banner-nav">
-		     <b><a href="/">Agent Portal</a></b> |  <b><a href="/support/profile/edit">Edit profile</a></b> | <b><a href="/logout">Sign out</a></b>
+		     <a href="/">Agent Portal</a> |  <a href="/support/profile/edit">Edit profile</a> | <a href="/logout">Sign out</a>
 		    </nav>
 		 <div id="search_section">
 	    <!-- Search and page links for the page -->
@@ -88,14 +85,14 @@
 			  <div class="hc-search-input">
 			    <label for="support-search-input" class="hide">Enter your search term here...
 			    </label>
-				  <input placeholder="Enter your search term here..." type="text" 
+				  <input id="support-search-input" placeholder="How can we help you?" type="text" 
 					name="term" class="special" value="" 
-		            rel="page-search" data-max-matches="10" id="support-search-input">
+		            rel="page-search" data-max-matches="10">
 			  </div>
 			    <div class="hc-search-button">
 				  <button class="btn btn-primary" type="submit" autocomplete="off">
 				  <p id="btn-text">Submit</p>
-					<i class="mobile-icon-search hide-tablet"></i>
+					<i class="mobile-icon-search hide-tablet"></i> 
 					  <span class="hide-in-mobile">Search</span>
 				  </button>	
 			    </div>
@@ -105,61 +102,26 @@
    <!-- Notification Messages -->
   <div class="alert alert-with-close notice" id="noticeajax" style="display:none;">
   </div> 
- <!-- Automatic Slideshow -->	
-	<div class="slideshow-container">
-	  <div class="mySlides fade">
-	    <div class="numbertext">1 / 3</div>
-	    <img src="assets/images/cameras_and_cship.jpg" style="width:100%">
-	    <div class="text">Caption Text</div>
-	  </div>
 
-	  <div class="mySlides fade">
-	    <div class="numbertext">2 / 3</div>
-	    <img src="assets/images/couple_cships.jpg" style="width:100%">
-	    <div class="text">Caption Two</div>
-	  </div>
-
-	  <div class="mySlides fade">
-	    <div class="numbertext">3 / 3</div>
-	    <img src="assets/images/CShips_at-distance" style="width:100%">
-	    <div class="text">Caption Three</div>
-	  </div>
-
-	  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-	  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-	</div>
-	<br>
-
-	<div style="text-align:center">
-	  <span class="dot" onclick="currentSlide(1)"></span> 
-	  <span class="dot" onclick="currentSlide(2)"></span> 
-	  <span class="dot" onclick="currentSlide(3)"></span> 
-	</div>
-<div class="space">
+<div class="tile-container">
+	<h1 class="tile"><a href="/support/support"><i class="fa fa-life-ring fa-2x" aria-hidden="true"></i><br>FAQs</a></h1>
+    <h1 class="tile"><a href="/support/home"><i class="fa fa-home fa-2x" aria-hidden="true"></i><br>Create Ticket</a></h1>
+    <h1 class="tile"><a href="/support/tickets/new"><i class="fa fa-paint-brush fa-2x" aria-hidden="true"></i><br>Check Ticket Status</a></h1>
+    <h1 class="tile"><a href="/support/tickets"><i class="fa fa-ticket fa-2x" aria-hidden="true"></i><br>Milestone Manuals</a></h1>
+    <h1 class="tile"><a href="/support/solutions"><i class="fa fa-flask fa-2x" aria-hidden="true"></i><br>FLIR Manuals</a></h1>
+    <h1 class="tile"><a href="/support/discussions"><i class="fa fa-forumbee fa-2x" aria-hidden="true"></i><br>Airship Manuals</a></h1>
+    <h1 class="tile"><a href="/support/otherlinks"><i class="fa fa-link fa-2x" aria-hidden="true"></i><br>Other links</a></h1>
+    <h1 class="tile"><a href="/support/visit"><i class="fa fa-plane fa-2x" aria-hidden="true"></i><br>Visit our Website</a></h1>
+    <h1 class="tile"><a href="/support/contact"><i class="fa fa-phone fa-2x" aria-hidden="true"></i><br>Home</a></h1>
+    <h1 class="tile"><a href="/support/about"><i class="fa fa-briefcase fa-2x" aria-hidden="true"></i><br>Our Work</a></h1>
 </div>
   </body>
 
-  <div>
-	 <nav>  
-	    <div id="tile-container">
-	    	<h1 class="tile"><a href="/support/support"a><i class="fa fa-life-ring fa-2x" aria-hidden="true"></i><br>Support</a></h1>
-	        <h1 class="tile"><a href="/support/home"><i class="fa fa-home fa-2x" aria-hidden="true"></i><br>home</a></h1>
-	        <h1 class="tile"><a href="/support/tickets/new"><i class="fa fa-paint-brush fa-2x" aria-hidden="true"></i><br>create ticket</a></h1>
-	        <h1 class="tile"><a href="/support/tickets"><i class="fa fa-ticket fa-2x" aria-hidden="true"></i><br>check ticket status</a></h1>
-	        <h1 class="tile"><a href="/support/solutions"><i class="fa fa-flask fa-2x" aria-hidden="true"></i><br>solutions</a></h1>
-	        <h1 class="tile"><a href="/support/discussions"><i class="fa fa-forumbee fa-2x" aria-hidden="true"></i><br>forums</a></h1>
-	        <h1 class="tile"><a href="/support/otherlinks"><i class="fa fa-link fa-2x" aria-hidden="true"></i><br>Other links</a></h1>
-	        <h1 class="tile"><a href="/support/visit"><i class="fa fa-plane fa-2x" aria-hidden="true"></i><br>Visit our Website</a></h1>
-	        <h1 class="tile"><a href="/support/contact"><i class="fa fa-phone fa-2x" aria-hidden="true"></i><br>Contact Us</a></h1>
-	        <h1 class="tile"><a href="/support/about"><i class="fa fa-briefcase fa-2x" aria-hidden="true"></i><br>Our Work</a></h1>
-	    </div>
-	 </nav>  
     <footer class="site-footer">
         <div>&copy;2017 Quintessential Systems. All Rights Reserved.<br>Hosted by Freshdesk
         </div>
     </footer>
-    </div>
-</div>
+
 
 		
 <script src="https://assets4.freshdesk.com/assets/cdn/portal_bottom-f265e11897717d276c48f8673543ba1e.js" type="text/javascript"></script>
@@ -205,7 +167,8 @@
 	};
 //]]>
 
-</script> 	
+</script> 
+
 </html>
 	<!-- <nav class="footer-links">
 					<a href="/support/home" class="active">Home</a>
