Mobile, tablet, and laptop designs updated.

--- a/app/index.html
+++ b/app/index.html
@@ -70,10 +70,13 @@
 
 <body>
     <header class="banner banner--light">
-	    <a href= 'https://cclsupport.freshdesk.com/support/home' class='banner__portal-logo'>
+	    <a href= 'https://cclsupport.freshdesk.com/support/home' class="banner__portal-logo">
 		    <img src='assets/images/qsys_sticky_logo.png' alt="Quinntessential Systems Logo">
 		</a> 
-
+		<a href= 'https://cclsupport.freshdesk.com/support/home' class="banner__portal-icon">
+		    <img src='assets/images/qsys_logo.png' alt="Quinntessential Systems Logo">
+		</a> 
+			
 		<!-- Menu Icon (optional code to add later)
 		<div class="banner__menu-icon banner__menu-icon-close-x">
 			<div class="banner__menu-icon__middle"></div>
@@ -107,7 +110,9 @@
    <!-- Notification Messages -->
   <div class="alert alert-with-close notice" id="noticeajax" style="display:none;">
   </div> 
-
+	<div class="hero-image">
+		<img src='assets/images/susnet_skyline_cam_fg.jpg' alt="sunset skyline">
+	</div>
 <div class="tile-container">
 	<h1 class="tile"><a href="https://cclsupport.freshdesk.com/support/tickets/new"><i class="fa fa-home fa-2x" aria-hidden="true"></i><br>Create Ticket</a></h1>
     <h1 class="tile"><a href="https://cclsupport.freshdesk.com/support/login"><i class="fa fa-paint-brush fa-2x" aria-hidden="true"></i><br>Check Ticket Status</a></h1>
@@ -123,7 +128,7 @@
   </body>
 
     <footer class="site-footer">
-        <div>&copy;2017 Quintessential Systems. All Rights Reserved.<br>Hosted by Freshdesk
+        <div class="site-footer__text">&copy; 2017 Quintessential Systems. All Rights Reserved.<br>Hosted by Freshdesk
         </div>
     </footer>
 
